added embedded spotify

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
         
     </head>
     <body> 
-        <h1> WELCOME TO MY SITE </h1>
+        <header>
+            <h1> MY WEBSITE </h1>
+        </header>
         <h2> Get to know more about me! </h2>
-        <p> Hello everyone! My name is Ignatia Vanya but you can call me Anya. Im an 11th grader in Mentari Intercultural School Bintaro.</p>
         <p> My hobby includes:</p>
         <ul>
             <li>swimming</li>
@@ -25,5 +26,8 @@
             <li><a href=https://instagram.com/ignatiavanya/ target="_blank">Instagram</a></li>
             <li><a href=https://twitter.com/benyenya/ target="_blank"> Twitter</a></li>
         </ul>
+        
+        <iframe src="https://open.spotify.com/embed/playlist/3W7pPsqgValsoWolB8snWf" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+
     </body>
 </html>
