--- a/contactme.html
+++ b/contactme.html
@@ -8,7 +8,12 @@
         
     </head>
     <body> 
-        <h1>Get in touch with me!</h1>
+        <header>
+        <h1>
+        <a href=index.html>Get in touch with me :D</a> </h1>
+        </header>
+
+        <br><br>
     
         <div class="container">
 
